@@ -6,27 +6,27 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.ccd.sdk.type.AddressUK;
-import uk.gov.hmcts.ccd.sdk.type.YesOrNo;
+import uk.gov.hmcts.reform.pcs.ccd.domain.PCSCase;
 import uk.gov.hmcts.reform.pcs.ccd.domain.Party;
+import uk.gov.hmcts.reform.pcs.ccd.domain.VerticalYesNo;
 import uk.gov.hmcts.reform.pcs.ccd.domain.respondpossessionclaim.DefendantContactDetails;
 import uk.gov.hmcts.reform.pcs.ccd.domain.respondpossessionclaim.DefendantResponses;
 import uk.gov.hmcts.reform.pcs.ccd.domain.respondpossessionclaim.PossessionClaimResponse;
-import uk.gov.hmcts.reform.pcs.ccd.event.respondpossessionclaim.StartEventHandler;
-import uk.gov.hmcts.reform.pcs.ccd.event.respondpossessionclaim.SubmitEventHandler;
-import uk.gov.hmcts.reform.pcs.ccd.domain.PCSCase;
-import uk.gov.hmcts.reform.pcs.ccd.domain.VerticalYesNo;
 import uk.gov.hmcts.reform.pcs.ccd.entity.AddressEntity;
 import uk.gov.hmcts.reform.pcs.ccd.entity.ClaimEntity;
 import uk.gov.hmcts.reform.pcs.ccd.entity.PcsCaseEntity;
 import uk.gov.hmcts.reform.pcs.ccd.entity.party.ClaimPartyEntity;
 import uk.gov.hmcts.reform.pcs.ccd.entity.party.PartyEntity;
 import uk.gov.hmcts.reform.pcs.ccd.entity.party.PartyRole;
+import uk.gov.hmcts.reform.pcs.ccd.event.respondpossessionclaim.StartEventHandler;
+import uk.gov.hmcts.reform.pcs.ccd.event.respondpossessionclaim.SubmitEventHandler;
+import uk.gov.hmcts.reform.pcs.ccd.page.respondpossessionclaim.page.RespondToPossessionDraftSavePage;
+import uk.gov.hmcts.reform.pcs.ccd.service.ClaimResponseService;
+import uk.gov.hmcts.reform.pcs.ccd.service.DefendantResponseService;
 import uk.gov.hmcts.reform.pcs.ccd.service.DraftCaseDataService;
 import uk.gov.hmcts.reform.pcs.ccd.service.PcsCaseService;
 import uk.gov.hmcts.reform.pcs.ccd.service.party.DefendantAccessValidator;
-import uk.gov.hmcts.reform.pcs.ccd.service.respondpossessionclaim.ImmutablePartyFieldValidator;
 import uk.gov.hmcts.reform.pcs.ccd.service.respondpossessionclaim.PossessionClaimResponseMapper;
-import uk.gov.hmcts.reform.pcs.ccd.util.AddressMapper;
 import uk.gov.hmcts.reform.pcs.exception.CaseAccessException;
 import uk.gov.hmcts.reform.pcs.security.SecurityContextService;
 
@@ -38,14 +38,10 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static org.mockito.ArgumentCaptor.forClass;
-import org.mockito.ArgumentCaptor;
 
 @ExtendWith(MockitoExtension.class)
 class RespondPossessionClaimTest extends BaseEventTest {
@@ -54,13 +50,13 @@ class RespondPossessionClaimTest extends BaseEventTest {
     private DraftCaseDataService draftCaseDataService;
 
     @Mock
+    private ClaimResponseService claimResponseService;
+
+    @Mock
     private PcsCaseService pcsCaseService;
 
     @Mock
     private SecurityContextService securityContextService;
-
-    @Mock
-    private AddressMapper addressMapper;
 
     @Mock
     private PossessionClaimResponseMapper responseMapper;
@@ -69,10 +65,14 @@ class RespondPossessionClaimTest extends BaseEventTest {
     private DefendantAccessValidator accessValidator;
 
     @Mock
-    private ImmutablePartyFieldValidator immutableFieldValidator;
+    private DefendantResponseService defendantResponseService;
+
+    @Mock
+    private RespondToPossessionDraftSavePage respondToPossessionDraftSavePage;
 
     @BeforeEach
     void setUp() {
+
         // Create handlers with real dependencies
         StartEventHandler startEventHandler = new StartEventHandler(
             pcsCaseService,
@@ -84,12 +84,14 @@ class RespondPossessionClaimTest extends BaseEventTest {
 
         SubmitEventHandler submitEventHandler = new SubmitEventHandler(
             draftCaseDataService,
-            immutableFieldValidator
+            claimResponseService,
+            defendantResponseService
         );
 
         setEventUnderTest(new RespondPossessionClaim(
             startEventHandler,
-            submitEventHandler
+            submitEventHandler,
+            respondToPossessionDraftSavePage
         ));
 
         // Mock existing draft with claimantProvided for save operations
@@ -109,41 +111,6 @@ class RespondPossessionClaimTest extends BaseEventTest {
         lenient().when(draftCaseDataService.getUnsubmittedCaseData(
                 eq(TEST_CASE_REFERENCE), eq(EventId.respondPossessionClaim)))
             .thenReturn(Optional.of(defaultExistingDraft));
-    }
-
-    @Test
-    void shouldPatchUnsubmittedEventData() {
-        AddressUK address = AddressUK.builder()
-            .addressLine1("123 Test Street")
-            .postTown("London")
-            .postCode("SW1A 1AA")
-            .build();
-
-        Party party = Party.builder()
-            .firstName("John")
-            .lastName("Doe")
-            .address(address)
-            .build();
-
-        PossessionClaimResponse possessionClaimResponse = PossessionClaimResponse.builder()
-            .defendantContactDetails(DefendantContactDetails.builder()
-                .party(party)
-                .build())
-            .build();
-
-        PCSCase caseData = PCSCase.builder()
-            .possessionClaimResponse(possessionClaimResponse)
-            .submitDraftAnswers(YesOrNo.NO)
-            .build();
-
-        callSubmitHandler(caseData);
-
-        verify(draftCaseDataService).patchUnsubmittedEventData(
-            eq(TEST_CASE_REFERENCE),
-            any(PCSCase.class),
-            eq(EventId.respondPossessionClaim)
-        );
-
     }
 
     @Test
@@ -303,34 +270,11 @@ class RespondPossessionClaimTest extends BaseEventTest {
             .hasMessage("User is not linked as a defendant on this case");
     }
 
-    @Test
-    void shouldNotSaveDraftWhenSubmitDraftIsYes() {
-        PossessionClaimResponse possessionClaimResponse = PossessionClaimResponse.builder()
-            .defendantContactDetails(DefendantContactDetails.builder()
-                .party(null)
-                .build())
-            .build();
-
-        PCSCase caseData = PCSCase.builder()
-            .possessionClaimResponse(possessionClaimResponse)
-            .submitDraftAnswers(YesOrNo.YES)
-            .build();
-
-
-        callSubmitHandler(caseData);
-
-        verify(draftCaseDataService, never()).patchUnsubmittedEventData(
-            eq(TEST_CASE_REFERENCE),
-            any(PCSCase.class),
-            eq(EventId.respondPossessionClaim)
-        );
-    }
 
     @Test
     void shouldNotSaveDraftWhenPossessionClaimResponseIsNull() {
         PCSCase caseData = PCSCase.builder()
             .possessionClaimResponse(null)
-            .submitDraftAnswers(YesOrNo.NO)
             .build();
 
 
@@ -343,30 +287,6 @@ class RespondPossessionClaimTest extends BaseEventTest {
         );
     }
 
-    @Test
-    void shouldSaveDraftWhenSubmitDraftAnswersIsNull() {
-        // Given: submitDraftAnswers is null (defaults to NO = save draft)
-        PossessionClaimResponse possessionClaimResponse = PossessionClaimResponse.builder()
-            .defendantContactDetails(DefendantContactDetails.builder()
-                .party(null)
-                .build())
-            .build();
-
-        PCSCase caseData = PCSCase.builder()
-            .possessionClaimResponse(possessionClaimResponse)
-            .submitDraftAnswers(null)
-            .build();
-
-        // When: submit callback is called
-        callSubmitHandler(caseData);
-
-        // Then: draft should be saved (null defaults to NO which means save draft)
-        verify(draftCaseDataService, times(1)).patchUnsubmittedEventData(
-            eq(TEST_CASE_REFERENCE),
-            any(),
-            eq(EventId.respondPossessionClaim)
-        );
-    }
 
     @Test
     void shouldUsePropertyAddressWhenAddressSameAsPropertyIsYes() {
@@ -581,74 +501,16 @@ class RespondPossessionClaimTest extends BaseEventTest {
     }
 
     @Test
-    void shouldSaveCompletePartyDataInDraftIncludingContactDetails() {
-        AddressUK address = AddressUK.builder()
-            .addressLine1("123 Test Street")
-            .postTown("London")
-            .postCode("SW1A 1AA")
-            .build();
-
-        Party party = Party.builder()
-            .firstName("John")
-            .lastName("Doe")
-            .address(address)
-            .emailAddress("john.doe@example.com")
-            .phoneNumber("07700900000")
-            .build();
-
-        PossessionClaimResponse possessionClaimResponse = PossessionClaimResponse.builder()
-            .defendantContactDetails(DefendantContactDetails.builder()
-                .party(party)
-                .build())
-            .build();
-
-        PCSCase caseData = PCSCase.builder()
-            .possessionClaimResponse(possessionClaimResponse)
-            .submitDraftAnswers(YesOrNo.NO)
-            .build();
-
-        callSubmitHandler(caseData);
-
-        ArgumentCaptor<PCSCase> draftCaptor = forClass(PCSCase.class);
-        verify(draftCaseDataService).patchUnsubmittedEventData(
-            eq(TEST_CASE_REFERENCE),
-            draftCaptor.capture(),
-            eq(EventId.respondPossessionClaim)
-        );
-
-        PCSCase savedDraft = draftCaptor.getValue();
-        // Note: submitDraftAnswers is NOT persisted - it's a transient UI control flag
-        assertThat(savedDraft.getPossessionClaimResponse()).isNotNull();
-
-        DefendantContactDetails contactDetails = savedDraft.getPossessionClaimResponse().getDefendantContactDetails();
-        assertThat(contactDetails.getParty()).isNotNull();
-        assertThat(contactDetails.getParty().getFirstName()).isEqualTo("John");
-        assertThat(contactDetails.getParty().getLastName()).isEqualTo("Doe");
-        assertThat(contactDetails.getParty().getEmailAddress())
-            .isEqualTo("john.doe@example.com");
-        assertThat(contactDetails.getParty().getPhoneNumber())
-            .isEqualTo("07700900000");
-        assertThat(contactDetails.getParty().getAddress()).isNotNull();
-        assertThat(contactDetails.getParty().getAddress().getAddressLine1())
-            .isEqualTo("123 Test Street");
-        assertThat(contactDetails.getParty().getAddress().getPostTown())
-            .isEqualTo("London");
-        assertThat(contactDetails.getParty().getAddress().getPostCode())
-            .isEqualTo("SW1A 1AA");
-    }
-
-    @Test
     void shouldReturnErrorWhenPossessionClaimResponseIsNull() {
         PCSCase caseData = PCSCase.builder()
             .possessionClaimResponse(null)
-            .submitDraftAnswers(YesOrNo.NO)
             .build();
 
         var response = callSubmitHandler(caseData);
 
         assertThat(response.getErrors()).isNotNull();
         assertThat(response.getErrors()).hasSize(1);
-        assertThat(response.getErrors().get(0)).isEqualTo("Invalid submission: missing response data");
+        assertThat(response.getErrors().getFirst()).isEqualTo("Invalid submission: missing response data");
 
         verify(draftCaseDataService, never()).patchUnsubmittedEventData(
             eq(TEST_CASE_REFERENCE),
@@ -656,444 +518,5 @@ class RespondPossessionClaimTest extends BaseEventTest {
             eq(EventId.respondPossessionClaim)
         );
     }
-
-    @Test
-    void shouldReturnErrorWhenDefendantDataIsNull() {
-        // Given: possessionClaimResponse exists but both defendantContactDetails and defendantResponses are null
-        PossessionClaimResponse possessionClaimResponse = PossessionClaimResponse.builder()
-            .defendantContactDetails(null)  // No defendant contact details provided
-            .defendantResponses(null)  // No defendant responses provided
-            .build();
-
-        PCSCase caseData = PCSCase.builder()
-            .possessionClaimResponse(possessionClaimResponse)
-            .submitDraftAnswers(YesOrNo.NO)
-            .build();
-
-        // When: submit callback is called
-        var response = callSubmitHandler(caseData);
-
-        // Then: should return error
-        assertThat(response.getErrors()).isNotNull();
-        assertThat(response.getErrors()).hasSize(1);
-        assertThat(response.getErrors().get(0))
-            .isEqualTo("Invalid submission: no data to save");
-
-        // And: should NOT save draft
-        verify(draftCaseDataService, never()).patchUnsubmittedEventData(
-            eq(TEST_CASE_REFERENCE),
-            any(),
-            eq(EventId.respondPossessionClaim)
-        );
-    }
-
-    @Test
-    void shouldDefaultToNoAndSaveDraftWhenSubmitDraftAnswersIsNull() {
-        PossessionClaimResponse possessionClaimResponse = PossessionClaimResponse.builder()
-            .defendantContactDetails(DefendantContactDetails.builder()
-                .party(Party.builder().firstName("John").build())
-                .build())
-            .build();
-
-        PCSCase caseData = PCSCase.builder()
-            .possessionClaimResponse(possessionClaimResponse)
-            .submitDraftAnswers(null)
-            .build();
-
-        var response = callSubmitHandler(caseData);
-
-        // When submitDraftAnswers is null, defaults to NO and saves as draft
-        assertThat(response.getErrors()).isNullOrEmpty();
-
-        verify(draftCaseDataService).patchUnsubmittedEventData(
-            eq(TEST_CASE_REFERENCE),
-            any(),
-            eq(EventId.respondPossessionClaim)
-        );
-    }
-
-    @Test
-    void shouldAllowNullFieldsInPartialUpdate() {
-        // Given: party is null (valid for partial updates - preserves existing party info)
-        PossessionClaimResponse possessionClaimResponse = PossessionClaimResponse.builder()
-            .defendantContactDetails(DefendantContactDetails.builder()
-                .party(null)  // Null is valid - partial update preserves existing party
-                .build())
-            .build();
-
-        PCSCase caseData = PCSCase.builder()
-            .possessionClaimResponse(possessionClaimResponse)
-            .submitDraftAnswers(YesOrNo.NO)
-            .build();
-
-        // When: submit callback is called
-        var response = callSubmitHandler(caseData);
-
-        // Then: should succeed (null fields are valid in partial updates)
-        assertThat(response.getErrors()).isNull();
-
-        // And: draft should be saved via deep merge (preserves existing fields)
-        verify(draftCaseDataService, times(1)).patchUnsubmittedEventData(
-            eq(TEST_CASE_REFERENCE),
-            any(),
-            eq(EventId.respondPossessionClaim)
-        );
-    }
-
-    @Test
-    void shouldReturnErrorWhenDraftSaveThrowsException() {
-        AddressUK address = AddressUK.builder()
-            .addressLine1("123 Test Street")
-            .postTown("London")
-            .postCode("SW1A 1AA")
-            .build();
-
-        Party party = Party.builder()
-            .firstName("John")
-            .lastName("Doe")
-            .address(address)
-            .build();
-
-        PossessionClaimResponse possessionClaimResponse = PossessionClaimResponse.builder()
-            .defendantContactDetails(DefendantContactDetails.builder()
-                .party(party)
-                .build())
-            .build();
-
-        PCSCase caseData = PCSCase.builder()
-            .possessionClaimResponse(possessionClaimResponse)
-            .submitDraftAnswers(YesOrNo.NO)
-            .build();
-
-        doThrow(new RuntimeException("Database connection failed"))
-            .when(draftCaseDataService).patchUnsubmittedEventData(
-                eq(TEST_CASE_REFERENCE),
-                any(PCSCase.class),
-                eq(EventId.respondPossessionClaim)
-            );
-
-        var response = callSubmitHandler(caseData);
-
-        assertThat(response.getErrors()).isNotNull();
-        assertThat(response.getErrors()).hasSize(1);
-        assertThat(response.getErrors().get(0))
-            .isEqualTo("We couldn't save your response. Please try again or contact support.");
-    }
-
-    @Test
-    void shouldReturnDefaultResponseWhenDraftSavedSuccessfully() {
-        AddressUK address = AddressUK.builder()
-            .addressLine1("123 Test Street")
-            .postTown("London")
-            .postCode("SW1A 1AA")
-            .build();
-
-        Party party = Party.builder()
-            .firstName("John")
-            .lastName("Doe")
-            .address(address)
-            .build();
-
-        PossessionClaimResponse possessionClaimResponse = PossessionClaimResponse.builder()
-            .defendantContactDetails(DefendantContactDetails.builder()
-                .party(party)
-                .build())
-            .build();
-
-        PCSCase caseData = PCSCase.builder()
-            .possessionClaimResponse(possessionClaimResponse)
-            .submitDraftAnswers(YesOrNo.NO)
-            .build();
-
-        var response = callSubmitHandler(caseData);
-
-        assertThat(response.getErrors()).isNullOrEmpty();
-
-        verify(draftCaseDataService).patchUnsubmittedEventData(
-            eq(TEST_CASE_REFERENCE),
-            any(PCSCase.class),
-            eq(EventId.respondPossessionClaim)
-        );
-    }
-
-    @Test
-    void shouldOmitAllNullFieldsFromPartyWhenSerializing() throws Exception {
-        // Given: Party with all fields null except firstName
-        Party party = Party.builder()
-            .firstName("John")
-            .lastName(null)
-            .orgName(null)
-            .nameKnown(null)
-            .emailAddress(null)
-            .address(null)
-            .addressKnown(null)
-            .addressSameAsProperty(null)
-            .phoneNumber(null)
-            .build();
-
-        PossessionClaimResponse response = PossessionClaimResponse.builder()
-            .defendantContactDetails(DefendantContactDetails.builder()
-                .party(party)
-                .build())
-            .build();
-
-        PCSCase caseData = PCSCase.builder()
-            .possessionClaimResponse(response)
-            .submitDraftAnswers(YesOrNo.NO)
-            .build();
-
-        // When: Submitting draft
-        callSubmitHandler(caseData);
-
-        // Then: Verify the saved draft omits null fields
-        ArgumentCaptor<PCSCase> captor = forClass(PCSCase.class);
-        verify(draftCaseDataService).patchUnsubmittedEventData(
-            eq(TEST_CASE_REFERENCE),
-            captor.capture(),
-            eq(EventId.respondPossessionClaim)
-        );
-
-        PCSCase savedDraft = captor.getValue();
-        assertThat(savedDraft.getPossessionClaimResponse()).isNotNull();
-
-        DefendantContactDetails contactDetails = savedDraft.getPossessionClaimResponse().getDefendantContactDetails();
-        assertThat(contactDetails.getParty()).isNotNull();
-        assertThat(contactDetails.getParty().getFirstName()).isEqualTo("John");
-
-        // Verify null fields were not set (remain null after deserialization)
-        assertThat(contactDetails.getParty().getLastName()).isNull();
-        assertThat(contactDetails.getParty().getEmailAddress()).isNull();
-    }
-
-    @Test
-    void shouldOmitNullAddressFieldsWhenSerializing() throws Exception {
-        // Given: Address with some fields null
-        AddressUK address = AddressUK.builder()
-            .addressLine1("123 Main Street")
-            .addressLine2(null)
-            .addressLine3(null)
-            .postTown("London")
-            .county(null)
-            .postCode("SW1A 1AA")
-            .country(null)
-            .build();
-
-        Party party = Party.builder()
-            .firstName("John")
-            .lastName("Doe")
-            .address(address)
-            .build();
-
-        PossessionClaimResponse response = PossessionClaimResponse.builder()
-            .defendantContactDetails(DefendantContactDetails.builder()
-                .party(party)
-                .build())
-            .build();
-
-        PCSCase caseData = PCSCase.builder()
-            .possessionClaimResponse(response)
-            .submitDraftAnswers(YesOrNo.NO)
-            .build();
-
-        // When: Submitting draft
-        callSubmitHandler(caseData);
-
-        // Then: Verify the saved draft omits null address fields
-        ArgumentCaptor<PCSCase> captor = forClass(PCSCase.class);
-        verify(draftCaseDataService).patchUnsubmittedEventData(
-            eq(TEST_CASE_REFERENCE),
-            captor.capture(),
-            eq(EventId.respondPossessionClaim)
-        );
-
-        PCSCase savedDraft = captor.getValue();
-        Party savedParty = savedDraft.getPossessionClaimResponse()
-            .getDefendantContactDetails().getParty();
-        AddressUK savedAddress = savedParty.getAddress();
-
-        assertThat(savedAddress).isNotNull();
-        assertThat(savedAddress.getAddressLine1()).isEqualTo("123 Main Street");
-        assertThat(savedAddress.getPostTown()).isEqualTo("London");
-        assertThat(savedAddress.getPostCode()).isEqualTo("SW1A 1AA");
-
-        // Verify null fields were not set
-        assertThat(savedAddress.getAddressLine2()).isNull();
-        assertThat(savedAddress.getCounty()).isNull();
-    }
-
-    @Test
-    void shouldIncludeAllNonNullFieldsWhenSerializing() throws Exception {
-        // Given: Fully populated response with no nulls
-        AddressUK address = AddressUK.builder()
-            .addressLine1("123 Main Street")
-            .addressLine2("Apt 4B")
-            .addressLine3("Building C")
-            .postTown("London")
-            .county("Greater London")
-            .postCode("SW1A 1AA")
-            .country("UK")
-            .build();
-
-        Party party = Party.builder()
-            .firstName("John")
-            .lastName("Doe")
-            .orgName("Test Org")
-            .nameKnown(VerticalYesNo.YES)
-            .emailAddress("john@example.com")
-            .address(address)
-            .addressKnown(VerticalYesNo.YES)
-            .addressSameAsProperty(VerticalYesNo.NO)
-            .phoneNumber("07700900000")
-            .build();
-
-        PossessionClaimResponse response = PossessionClaimResponse.builder()
-            .defendantContactDetails(DefendantContactDetails.builder()
-                .party(party)
-                .build())
-            .build();
-
-        PCSCase caseData = PCSCase.builder()
-            .possessionClaimResponse(response)
-            .submitDraftAnswers(YesOrNo.NO)
-            .build();
-
-        // When: Submitting draft
-        callSubmitHandler(caseData);
-
-        // Then: All fields should be included
-        ArgumentCaptor<PCSCase> captor = forClass(PCSCase.class);
-        verify(draftCaseDataService).patchUnsubmittedEventData(
-            eq(TEST_CASE_REFERENCE),
-            captor.capture(),
-            eq(EventId.respondPossessionClaim)
-        );
-
-        PCSCase savedDraft = captor.getValue();
-        Party savedParty = savedDraft.getPossessionClaimResponse()
-            .getDefendantContactDetails().getParty();
-        AddressUK savedAddress = savedParty.getAddress();
-
-        // Verify all party fields are preserved
-        assertThat(savedParty.getFirstName()).isEqualTo("John");
-        assertThat(savedParty.getLastName()).isEqualTo("Doe");
-        assertThat(savedParty.getOrgName()).isEqualTo("Test Org");
-        assertThat(savedParty.getNameKnown()).isEqualTo(VerticalYesNo.YES);
-        assertThat(savedParty.getEmailAddress()).isEqualTo("john@example.com");
-        assertThat(savedParty.getAddressKnown()).isEqualTo(VerticalYesNo.YES);
-        assertThat(savedParty.getAddressSameAsProperty()).isEqualTo(VerticalYesNo.NO);
-        assertThat(savedParty.getPhoneNumber()).isEqualTo("07700900000");
-
-        // Verify all address fields are preserved
-        assertThat(savedAddress.getAddressLine1()).isEqualTo("123 Main Street");
-        assertThat(savedAddress.getAddressLine2()).isEqualTo("Apt 4B");
-        assertThat(savedAddress.getAddressLine3()).isEqualTo("Building C");
-        assertThat(savedAddress.getPostTown()).isEqualTo("London");
-        assertThat(savedAddress.getCounty()).isEqualTo("Greater London");
-        assertThat(savedAddress.getPostCode()).isEqualTo("SW1A 1AA");
-        assertThat(savedAddress.getCountry()).isEqualTo("UK");
-    }
-
-    @Test
-    void shouldHandleMixedNullAndNonNullPartyFields() throws Exception {
-        // Given: Party with mixed null and non-null fields (realistic scenario)
-        AddressUK address = AddressUK.builder()
-            .addressLine1("123 Main Street")
-            .addressLine2(null)  // User didn't fill this
-            .postTown("London")
-            .postCode("SW1A 1AA")
-            .country(null)  // User didn't fill this
-            .build();
-
-        Party party = Party.builder()
-            .firstName("John")
-            .lastName("Doe")
-            .orgName(null)  // Not applicable for individual
-            .emailAddress("john@example.com")
-            .address(address)
-            .phoneNumber(null)  // User didn't provide
-            .build();
-
-        PossessionClaimResponse response = PossessionClaimResponse.builder()
-            .defendantContactDetails(DefendantContactDetails.builder()
-                .party(party)
-                .build())
-            .build();
-
-        PCSCase caseData = PCSCase.builder()
-            .possessionClaimResponse(response)
-            .submitDraftAnswers(YesOrNo.NO)
-            .build();
-
-        // When: Submitting draft
-        callSubmitHandler(caseData);
-
-        // Then: Non-null fields included, null fields omitted
-        ArgumentCaptor<PCSCase> captor = forClass(PCSCase.class);
-        verify(draftCaseDataService).patchUnsubmittedEventData(
-            eq(TEST_CASE_REFERENCE),
-            captor.capture(),
-            eq(EventId.respondPossessionClaim)
-        );
-
-        PCSCase savedDraft = captor.getValue();
-        Party savedParty = savedDraft.getPossessionClaimResponse()
-            .getDefendantContactDetails().getParty();
-        AddressUK savedAddress = savedParty.getAddress();
-
-        // Non-null fields should be present
-        assertThat(savedParty.getFirstName()).isEqualTo("John");
-        assertThat(savedParty.getLastName()).isEqualTo("Doe");
-        assertThat(savedParty.getEmailAddress()).isEqualTo("john@example.com");
-        assertThat(savedAddress.getAddressLine1()).isEqualTo("123 Main Street");
-        assertThat(savedAddress.getPostTown()).isEqualTo("London");
-        assertThat(savedAddress.getPostCode()).isEqualTo("SW1A 1AA");
-
-        // Null fields should remain null (not overwritten)
-        assertThat(savedParty.getOrgName()).isNull();
-        assertThat(savedParty.getPhoneNumber()).isNull();
-        assertThat(savedAddress.getAddressLine2()).isNull();
-        assertThat(savedAddress.getCountry()).isNull();
-    }
-
-    @Test
-    void shouldOmitNullAddressWhenPartyAddressIsNull() throws Exception {
-        // Given: Party with null address
-        Party party = Party.builder()
-            .firstName("John")
-            .lastName("Doe")
-            .address(null)  // No address provided
-            .build();
-
-        PossessionClaimResponse response = PossessionClaimResponse.builder()
-            .defendantContactDetails(DefendantContactDetails.builder()
-                .party(party)
-                .build())
-            .build();
-
-        PCSCase caseData = PCSCase.builder()
-            .possessionClaimResponse(response)
-            .submitDraftAnswers(YesOrNo.NO)
-            .build();
-
-        // When: Submitting draft
-        callSubmitHandler(caseData);
-
-        // Then: Address field should be omitted
-        ArgumentCaptor<PCSCase> captor = forClass(PCSCase.class);
-        verify(draftCaseDataService).patchUnsubmittedEventData(
-            eq(TEST_CASE_REFERENCE),
-            captor.capture(),
-            eq(EventId.respondPossessionClaim)
-        );
-
-        PCSCase savedDraft = captor.getValue();
-        Party savedParty = savedDraft.getPossessionClaimResponse()
-            .getDefendantContactDetails().getParty();
-
-        assertThat(savedParty.getFirstName()).isEqualTo("John");
-        assertThat(savedParty.getLastName()).isEqualTo("Doe");
-        assertThat(savedParty.getAddress()).isNull();
-    }
-
 }
 
